[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
yewdux = "0.9.0"
gloo = "0.8.0"
serde = "1.0.152"
serde_json = "1.0.91"
stylist = { version = "0.11.0", features = ["yew", "parser"] }
wasm-bindgen = "0.2.79"
# fp-bindgen = { version = "2.4.0", features = ["generators"] }
# fp-bindgen-macros = "2.4.0"
# fp-bindgen-support = "2.4.0"
web-sys = { version = "0.3.60", features = ["HtmlInputElement"] } 